--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,35 +1,39 @@
-<h2>アカウント登録</h2>
+<div class="card col-sm-6 mx-auto mt-5">
+  <div class="card-body">
+    <h3 class="mt-1 mb-3">アカウントを作成</h3>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+ 
+    <div class="form-group">
+      <%= f.label :name, :class => "form-label" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", :class => "form-control" %>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %> <br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <div class="form-group">
+      <%= f.label :email, :class => "form-label" %>
+      <%= f.email_field :email, autocomplete: "email", :class => "form-control" %>
+    </div>
+ 
+    <div class="form-group">
+      <%= f.label :password, :class => "form-label" %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %>文字以上)</em>
+      <% end %>
+      <%= f.password_field :password, :class => "form-control" %>
+    </div>
+ 
+    <div class="form-group">
+      <%= f.label :password_confirmation, :class => "form-label" %>
+      <%= f.password_field :password_confirmation, :class => "form-control" %>
+    </div>
+ 
+    <div class="actions">
+      <%= f.submit "アカウントを作成する", :class => "btn btn-primary btn-block" %>
+    </div>
+    <% end %>
+    <div class="mt-2">
+      <p>すでにアカウントをお持ちですか？</p>
+      <%= link_to "ログイン", new_user_session_path %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以上)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "アカウント登録" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
+</div>
