update/送信ボタンの上に余白を追加

--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -37,7 +37,7 @@
       <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
     </div>
  
-    <div class="actions">
+    <div class="actions mt-3">
       <%= f.submit "更新する", :class => "btn btn-primary btn-block" %>
       <%= link_to "キャンセルして戻る", :back, :class => "btn btn-secondary btn-block" %>
     </div>
