--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -27,7 +27,7 @@
       <%= f.password_field :password_confirmation, :class => "form-control" %>
     </div>
  
-    <div class="actions">
+    <div class="actions mt-3">
       <%= f.submit "アカウントを作成する", :class => "btn btn-primary btn-block" %>
     </div>
     <% end %>
