--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <% if user_signed_in? %>
+      <%= render  "shared/header" %>
+      <div class="container-fluid">
+        <div class="row">
+          <%= render  "shared/sidebar" %>
+          <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
+            <%= yield %>
+          </main>
+        </div>
+      </div>
+    <% else %>
+      <%= yield %>
+    <% end %>
   </body>
 </html>
