--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,16 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= render  "shared/header" %>
+      <div id="header"></div>
       <div class="container-fluid">
         <div class="row">
-          <%= render  "shared/sidebar" %>
+          <div id="sidebar"></div>
           <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
             <%= yield %>
           </main>
         </div>
       </div>
+      <%= vite_javascript_tag 'Application.tsx' %>
     <% else %>
       <%= yield %>
     <% end %>
