update/サイドバーを消した際、メインコンテンツが狭いデバイスで適切に表示されなかったため、FlexからBlockへの変更

--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -1,7 +1,8 @@
 @use '@/stylesheets/application';
-.row.no-margin-right {
-  margin-right: 0;
+.row {
+  display: block;
 }
+
 .dropdown-toggle { outline: 0; }
 
 #sidebar-toggle-button {
