--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -86,18 +86,14 @@ header {
   }
 }
 
-.navbar-expand {
-  flex-wrap: wrap;
+
+.main-top {
+  margin-top: 58px;
 }
 
-@media (min-width: 576px) {
-  .main-top {
-    margin-top: 58px;
-  }
-}
 
 @media (max-width: 576px) {
-  .main-top {
-    margin-top: 98px;
+  .mobile-text {
+    font-size: 14px;
   }
 }
