--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>こんにちは、<%= @resource.email %>さん！</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>誰かがあなたのパスワードを変更するためのリンクをリクエストしました。以下のリンクを使用して変更できます。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワード変更', edit_user_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>このリクエストを行っていない場合は、このメールを無視してください。</p>
+<p>上記のリンクにアクセスし、新しいパスワードを設定するまでパスワードは変更されません。</p>
+
