update/テーブル名をusersからadminsに変更したため、それに伴い ,deviseの設定や各種ファイルのuserをadminに変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,12 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
+    <% if admin_signed_in? %>
       <%= vite_javascript_tag 'Application.tsx' %>
       <% props = {
-        usersRootPath: 'usersRootPath',
-        editUserRegistrationPath: 'editUserRegistrationPath',
-        destroyUserSessionPath: 'destroyUserSessionPath',
+        adminsRootPath: 'adminsRootPath',
+        editAdminRegistrationPath: 'editAdminRegistrationPath',
+        destroyAdminSessionPath: 'destroyAdminSessionPath',
       }
       %>
       <app-component data-props="<%= props.to_json %>">
