fix/deviseのuser名テーブルをadminに変更したが、それに伴うurlの変更をしていなかったため変更

--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -33,7 +33,7 @@
     <% end %>
     <div class="mt-2">
       <p>すでにアカウントをお持ちですか？</p>
-      <%= link_to "ログイン", new_user_session_path %>
+      <%= link_to "ログイン", new_admin_session_path %>
     </div>
   </div>
 </div>
