--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :email, "Eメール", :class => "form-label" %>
+      <%= f.label :email, :class => "form-label" %>
       <%= f.email_field :email, autocomplete: "email", :class => "form-control" %>
     </div>
  
@@ -27,12 +27,12 @@
     </div>
  
     <div class="form-group">
-      <%= f.label :password_confirmation, "パスワード(確認)", :class => "form-label" %><br />
+      <%= f.label :password_confirmation, :class => "form-label" %><br />
       <%= f.password_field :password_confirmation, :class=>"form-control" %>
     </div>
  
     <div class="form-group">
-      <%= f.label :current_password, "現在のパスワード", :class => "form-label" %>
+      <%= f.label :current_password, :class => "form-label" %>
       <%= f.password_field :current_password, :class => "form-control" %>
       <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
     </div>
