--- a/app/views/admins/passwords/edit.html.erb
+++ b/app/views/admins/passwords/edit.html.erb
@@ -21,6 +21,7 @@
       <div class="actions">
         <%= f.submit "パスワードを変更", class: "btn btn-primary" %>
       </div>
+      <%= f.hidden_field :reset_password_token %>
     <% end %>
 
     <%= render "devise/shared/links" %>
