--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -5,12 +5,12 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="form-group">
-      <%= f.label :name, :class => "form-label" %>
+      <%= f.label :name, :class => "form-label mt-3" %>
       <%= f.text_field :name, autocomplete: "name", :class => "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :email, :class => "form-label" %>
+      <%= f.label :email, :class => "form-label mt-3" %>
       <%= f.email_field :email, autocomplete: "email", :class => "form-control" %>
     </div>
  
@@ -19,7 +19,7 @@
     <% end %>
  
     <div class="form-group">
-      <%= f.label :password, :class => "form-label" %> <span class="small">(パスワードを変更しない場合は記入しないでください。)</span>
+      <%= f.label :password, :class => "form-label mt-3" %> <span class="small">(パスワードを変更しない場合は記入しないでください。)</span>
       <%= f.password_field :password, :class => "form-control" %>
       <% if @minimum_password_length %>
       <div class="small form-text text-muted">最低<%= @minimum_password_length %>文字以上</div>
@@ -27,12 +27,12 @@
     </div>
  
     <div class="form-group">
-      <%= f.label :password_confirmation, :class => "form-label" %><br />
+      <%= f.label :password_confirmation, :class => "form-label mt-3" %><br />
       <%= f.password_field :password_confirmation, :class=>"form-control" %>
     </div>
  
     <div class="form-group">
-      <%= f.label :current_password, :class => "form-label" %>
+      <%= f.label :current_password, :class => "form-label mt-3" %>
       <%= f.password_field :current_password, :class => "form-control" %>
       <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
     </div>
