--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -5,17 +5,17 @@
     <%= render "devise/shared/error_messages", resource: resource %>
  
     <div class="form-group">
-      <%= f.label :name, :class => "form-label" %>
+      <%= f.label :name, :class => "form-label mt-3" %>
       <%= f.text_field :name, autofocus: true, autocomplete: "name", :class => "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= f.label :email, :class => "form-label" %>
+      <%= f.label :email, :class => "form-label mt-3" %>
       <%= f.email_field :email, autocomplete: "email", :class => "form-control" %>
     </div>
  
     <div class="form-group">
-      <%= f.label :password, :class => "form-label" %>
+      <%= f.label :password, :class => "form-label mt-3" %>
       <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %>文字以上)</em>
       <% end %>
@@ -23,7 +23,7 @@
     </div>
  
     <div class="form-group">
-      <%= f.label :password_confirmation, :class => "form-label" %>
+      <%= f.label :password_confirmation, :class => "form-label mt-3" %>
       <%= f.password_field :password_confirmation, :class => "form-control" %>
     </div>
  
@@ -31,8 +31,8 @@
       <%= f.submit "アカウントを作成する", :class => "btn btn-primary btn-block" %>
     </div>
     <% end %>
-    <div class="mt-2">
-      <p>すでにアカウントをお持ちですか？</p>
+    <div class="mt-3">
+      <p class='mb-0'>すでにアカウントをお持ちですか？</p>
       <%= link_to "ログイン", new_admin_session_path %>
     </div>
   </div>
