--- a/app/views/admins/passwords/edit.html.erb
+++ b/app/views/admins/passwords/edit.html.erb
@@ -2,14 +2,13 @@
   <div class="card-body">
     <h3 class="text-center mt-1 mb-4">パスワードを変更</h3>
 
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_with(model: resource, as: resource_name, url: password_path(resource_name), method: :put) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-
       <div class="form-group mt-2">
         <%= f.label :password, "新しいパスワード", class: "form-label mt-3" %>
         <% if @minimum_password_length %>
-        <em>(最低<%= @minimum_password_length %>文字以上)</em>
-      <% end %>
+          <em>(最低<%= @minimum_password_length %>文字以上)</em>
+        <% end %>
         <%= f.password_field :password, class: "form-control", autofocus: true, autocomplete: "new-password" %>
       </div>
 
@@ -23,7 +22,6 @@
       </div>
       <%= f.hidden_field :reset_password_token %>
     <% end %>
-
     <div class="mt-3">
       <%= render "devise/shared/links" %>
     </div>
