--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -1,46 +1,45 @@
 <div class="card col-sm-6 mx-auto mt-5">
   <div class="card-body">
     <h3 class="text-center mt-1 mb-4">アカウントを編集する</h3>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), method: :put) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="form-group">
+        <%= f.label :name, class: "form-label mt-3" %>
+        <%= f.text_field :name, autocomplete: "name", class: "form-control" %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :name, :class => "form-label mt-3" %>
-      <%= f.text_field :name, autocomplete: "name", :class => "form-control" %>
-    </div>
+      <div class="form-group">
+        <%= f.label :email, class: "form-label mt-3" %>
+        <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :email, :class => "form-label mt-3" %>
-      <%= f.email_field :email, autocomplete: "email", :class => "form-control" %>
-    </div>
- 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-    <% end %>
- 
-    <div class="form-group">
-      <%= f.label :password, :class => "form-label mt-3" %> <span class="small">(パスワードを変更しない場合は記入しないでください。)</span>
-      <%= f.password_field :password, :class => "form-control" %>
-      <% if @minimum_password_length %>
-      <div class="small form-text text-muted">最低<%= @minimum_password_length %>文字以上</div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
-    </div>
- 
-    <div class="form-group">
-      <%= f.label :password_confirmation, :class => "form-label mt-3" %><br />
-      <%= f.password_field :password_confirmation, :class=>"form-control" %>
-    </div>
- 
-    <div class="form-group">
-      <%= f.label :current_password, :class => "form-label mt-3" %>
-      <%= f.password_field :current_password, :class => "form-control" %>
-      <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
-    </div>
- 
-    <div class="actions mt-3">
-      <%= f.submit "更新する", :class => "btn btn-primary btn-block" %>
-      <%= link_to "キャンセルして戻る", :back, :class => "btn btn-secondary btn-block" %>
-    </div>
+
+      <div class="form-group">
+        <%= f.label :password, class: "form-label mt-3" %> <span class="small">(パスワードを変更しない場合は記入しないでください。)</span>
+        <%= f.password_field :password, class: "form-control" %>
+        <% if @minimum_password_length %>
+          <div class="small form-text text-muted">最低<%= @minimum_password_length %>文字以上</div>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: "form-label mt-3" %><br />
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :current_password, class: "form-label mt-3" %>
+        <%= f.password_field :current_password, class: "form-control" %>
+        <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
+      </div>
+
+      <div class="actions mt-3">
+        <%= f.submit "更新する", class: "btn btn-primary btn-block" %>
+        <%= link_to "キャンセルして戻る", :back, class: "btn btn-secondary btn-block" %>
+      </div>
     <% end %>
   </div>
 </div>
