--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="card col-sm-6 mx-auto mt-5">
   <div class="card-body">
-    <h3 class="text-center mt-1 mb-4">アカウントを編集する</h3>
+    <h3 class="text-center mt-3 mb-3">アカウントを編集する</h3>
     <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), method: :put) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <div class="form-group">
@@ -19,24 +19,21 @@
 
       <div class="form-group">
         <%= f.label :password, class: "form-label mt-3" %> <span class="small">(パスワードを変更しない場合は記入しないでください。)</span>
-        <%= f.password_field :password, class: "form-control" %>
-        <% if @minimum_password_length %>
-          <div class="small form-text text-muted">最低<%= @minimum_password_length %>文字以上</div>
-        <% end %>
+        <% placeholder_password = @minimum_password_length ? "#{@minimum_password_length}文字以上" : "" %>
+        <%= f.password_field :password, class: "form-control", placeholder: "半角英数#{placeholder_password}" %>
       </div>
 
       <div class="form-group">
         <%= f.label :password_confirmation, class: "form-label mt-3" %><br />
-        <%= f.password_field :password_confirmation, class: "form-control" %>
+        <%= f.password_field :password_confirmation, class: "form-control", placeholder: "半角英数#{placeholder_password}" %>
       </div>
 
       <div class="form-group">
         <%= f.label :current_password, class: "form-label mt-3" %>
-        <%= f.password_field :current_password, class: "form-control" %>
-        <div class="small form-text">変更のために現在のパスワードを入力してください。</div>
+        <%= f.password_field :current_password, class: "form-control", placeholder: "変更のために現在のパスワードを入力してください" %>
       </div>
 
-      <div class="actions mt-3">
+      <div class="actions mt-5">
         <%= f.submit "更新する", class: "btn btn-primary btn-block" %>
         <%= link_to "キャンセルして戻る", :back, class: "btn btn-secondary btn-block" %>
       </div>
