--- a/app/views/admins/registrations/new.html.erb
+++ b/app/views/admins/registrations/new.html.erb
@@ -1,33 +1,31 @@
 <div class="card col-sm-6 mx-auto mt-5 ">
   <div class="card-body">
-    <h3 class="mt-3 mb-3">アカウントを作成</h3>
+    <h3 class="text-center mt-3 mb-3">アカウントを作成</h3>
     <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="form-group">
         <%= f.label :name, class: "form-label mt-3" %>
-        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", placeholder: "食べ物太郎" %>
       </div>
 
       <div class="form-group">
         <%= f.label :email, class: "form-label mt-3" %>
-        <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+        <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "mail@example.com" %>
       </div>
 
       <div class="form-group">
         <%= f.label :password, class: "form-label mt-3" %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %>文字以上)</em>
-        <% end %>
-        <%= f.password_field :password, class: "form-control" %>
+        <% placeholder_password = @minimum_password_length ? "#{@minimum_password_length}文字以上" : "" %>
+        <%= f.password_field :password, class: "form-control", placeholder: "半角英数#{placeholder_password}" %>
       </div>
 
       <div class="form-group">
         <%= f.label :password_confirmation, class: "form-label mt-3" %>
-        <%= f.password_field :password_confirmation, class: "form-control" %>
+        <%= f.password_field :password_confirmation, class: "form-control", placeholder: "半角英数#{placeholder_password}" %>
       </div>
 
-      <div class="actions mt-3">
+      <div class="actions mt-5">
         <%= f.submit "アカウントを作成する", class: "btn btn-primary btn-block" %>
       </div>
     <% end %>
