--- a/app/views/admins/shared/_flashes.html.erb
+++ b/app/views/admins/shared/_flashes.html.erb
@@ -1,9 +1,7 @@
 <% flash.each do |key, value| %>
-  <div class="alert alert-<%= bootstrap_alert(key) %> alert-dismissible fade show">
+  <div class="alert alert-<%= bootstrap_alert(key) %> alert-dismissible fade show" role="alert">
     <span><%= value %></span>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
 
