update/サイドバーにお知らせ新規作成と一覧ページへのリンクを追加し不要なpropsを削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,7 @@
   <body>
     <% if admin_signed_in? %>
       <%= vite_javascript_tag 'Application.tsx' %>
-      <% props = {
-        adminsRootPath: 'adminsRootPath',
-        editAdminRegistrationPath: 'editAdminRegistrationPath',
-        destroyAdminSessionPath: 'destroyAdminSessionPath',
-      }
-      %>
-      <app-component data-props="<%= props.to_json %>">
+      <app-component>
         <%= yield %>
       </app-component>
     <% else %>
