--- a/app/views/admins/news/_form.html.erb
+++ b/app/views/admins/news/_form.html.erb
@@ -26,14 +26,14 @@
 <% if f.object.new_record? %>
   <div class="mt-3">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-success' %></li>
+      <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "お知らせ一覧に戻る", admins_news_index_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
   <div class="mt-3">
     <ul class="list-inline">
-      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-warning' %></li>
+      <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "お知らせ一覧に戻る", admins_news_index_path, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
