--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="mt-4">
-        <%= link_to "一覧に戻る", admins_news_index_path, class: 'btn btn-primary' %>
+        <%= link_to "一覧に戻る", admins_news_index_path, class: 'btn btn-secondary' %>
       </div>
     </div>
   </div>
