--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -1,5 +1,3 @@
-<!-- これが部分ビューであると仮定しています（例: _news_table.html.erb） -->
-
 <h3 class="mt-4 mb-4">お知らせ一覧</h3>
 <%= render "admins/shared/flashes" %>
 
@@ -28,8 +26,11 @@
               <td class="align-middle"><%= format_datetime(news.start_at) %></td>
               <td class="align-middle"><%= format_datetime(news.end_at) %></td>
               <td class="align-middle"><%= news.body %></td>
-              <td>
-                <%= link_to "編集", [:edit_admins, news], class: "btn btn-primary btn-sm" %>
+              <td class="text-center">
+                <%= link_to "編集", [:edit_admins, news], class: "btn btn-outline-primary btn-sm" %>
+              </td>
+              <td class="text-start">
+                <%= button_to "削除", [:admins, news], { method: :delete, form: { data: { turbo_confirm: "本当に削除しますか？" } }, class: "btn btn-outline-danger btn-sm" } %>
               </td>
             </tr>
           <% end %>
