update/一覧画面のタイトルも編集画面な度に合わせてスタイリングの変更

--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -1,7 +1,7 @@
-<h3 class="mt-4 mb-4">お知らせ一覧</h3>
-<%= render "admins/shared/flashes" %>
+<div class="container mt-4">
+  <h3 class="mb-4">お知らせ一覧</h3>
+  <%= render "admins/shared/flashes" %>
 
-<div class="container">
   <div class="mb-3"><%= @deleteError %></div>
   <% if @news %>
     <% if @news.size.zero? %>
