update/お知らせ一覧ページに中央揃えのページネーションを作成

--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -41,3 +41,5 @@
 
   <p><%= link_to "お知らせ新規登録", new_admins_news_path, class: 'btn btn-primary' %></p>
 </div>
+
+<%= paginate @news, theme: 'bootstrap-5' %>
