--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -1,43 +1,45 @@
 <div class="container mt-4">
-  <h3 class="mb-4">お知らせ一覧</h3>
-  <%= render "admins/shared/flashes" %>
-
-  <div class="mb-3"><%= @deleteError %></div>
-  <% if @news %>
-    <% if @news.size.zero? %>
-      <div class="alert alert-info">検索結果は0件です。</div>
-    <% elsif @news.size > 0 %>
-      <table class="table table-hover">
-        <thead class="table-dark">
-          <tr>
-            <th>カレンダー日付</th>
-            <th>タイトル</th>
-            <th>開始日時</th>
-            <th>終了日時</th>
-            <th>本文</th>
-            <th colspan="2"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @news.each do |news| %>
-            <tr>
-              <td class="align-middle"><%= format_date(news.calendar_date) %></td>
-              <td class="align-middle"><%= link_to news.title, [:admins, news], class: "text-primary" %></td>
-              <td class="align-middle"><%= format_datetime(news.start_at) %></td>
-              <td class="align-middle"><%= format_datetime(news.end_at) %></td>
-              <td class="align-middle"><%= news.body %></td>
-              <td class="text-center">
-                <%= link_to "編集", [:edit_admins, news], class: "btn btn-outline-primary btn-sm" %>
-              </td>
-              <td class="text-start">
-                <%= button_to "削除", [:admins, news], { method: :delete, form: { data: { turbo_confirm: "本当に削除しますか？" } }, class: "btn btn-outline-danger btn-sm" } %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+  <div class="d-flex justify-content-between mb-4">
+    <h3>お知らせ一覧</h3>
+    <%= search_form_for @q, url: admins_news_index_path, class: 'form-inline' do |f| %>
+      <div class="input-group">
+        <%= f.search_field @search_scope, class: 'form-control', placeholder: '検索ワード' %>
+        <div class="input-group-append">
+          <%= f.submit '検索', class: 'btn btn-primary' %>
+        </div>
+      </div>
     <% end %>
-  <% end %>
+  </div>
+  <%= render "admins/shared/flashes" %>
+  <table class="table table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th>カレンダー日付</th>
+        <th>タイトル</th>
+        <th>開始日時</th>
+        <th>終了日時</th>
+        <th>本文</th>
+        <th colspan="2"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @news.each do |news| %>
+        <tr>
+          <td class="align-middle"><%= format_date(news.calendar_date) %></td>
+          <td class="align-middle"><%= link_to news.title, [:admins, news], class: "text-primary" %></td>
+          <td class="align-middle"><%= format_datetime(news.start_at) %></td>
+          <td class="align-middle"><%= format_datetime(news.end_at) %></td>
+          <td class="align-middle"><%= news.body %></td>
+          <td class="text-center">
+            <%= link_to "編集", [:edit_admins, news], class: "btn btn-outline-primary btn-sm" %>
+          </td>
+          <td class="text-start">
+            <%= button_to "削除", [:admins, news], { method: :delete, form: { data: { turbo_confirm: "本当に削除しますか？" } }, class: "btn btn-outline-danger btn-sm" } %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
   <p><%= link_to "お知らせ新規登録", new_admins_news_path, class: 'btn btn-primary' %></p>
 </div>
