--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -34,7 +34,7 @@
             <%= link_to "編集", [:edit_admins, news], class: "btn btn-outline-primary btn-sm" %>
           </td>
           <td class="text-start">
-            <%= button_to "削除", [:admins, news], { method: :delete, form: { data: { turbo_confirm: "本当に削除しますか？" } }, class: "btn btn-outline-danger btn-sm" } %>
+            <%= button_to "削除", [:admins, news], { method: :delete, class: "btn btn-outline-danger btn-sm", onclick: "return confirm('本当に削除しますか？');" } %>
           </td>
         </tr>
       <% end %>
