--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -3,23 +3,23 @@
   <%= render "admins/shared/flashes" %>
 
   <div class="card">
-    <div class="card-body">
-      <h5 class="card-title"><%= @news.title %></h5>
-
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"><strong>カレンダー日付:</strong> <%= @news.calendar_date.strftime("%Y/ %m/ %d") %></li>
-        <li class="list-group-item"><strong>開始日時:</strong> <%= @news.start_at.strftime("%Y/ %m/ %d /%H:%M") %></li>
-        <li class="list-group-item"><strong>終了日時:</strong> <%= @news.end_at.strftime("%Y/ %m/ %d /%H:%M") %></li>
-      </ul>
+    <div class="card-body p-5">
+      <div class="d-flex justify-content-between">
+        <h5 class="card-title"><%= @news.title %></h5>
+        <div class="text-right">
+          <small class="text-muted">
+            <%= "公開日時: " + format_datetime(@news.start_at) %><br>
+            <%= "公開終了日時: " + format_datetime(@news.end_at) %>
+          </small>
+        </div>
+      </div>
 
       <div class="mt-3">
-        <strong>本文:</strong>
         <p><%= @news.body %></p>
       </div>
-
-      <div class="mt-4">
-        <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
-      </div>
     </div>
+  </div>
+  <div class="mt-4">
+    <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
   </div>
 </div>
