--- a/app/views/admins/news/_form.html.erb
+++ b/app/views/admins/news/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
-  <%= f.label :calendar_date, 'カレンダー日付' %>
-  <%= f.date_field :calendar_date, class: 'form-control' %>
+  <%= f.label :calendar_date, '日付' %>
+  <%= f.date_field :calendar_date, class: 'form-control', min: 1.year.ago.to_date, max: 1.year.from_now.to_date, value: Date.current %>
 </div>
 
 <div class="form-group">
@@ -10,12 +10,12 @@
 
 <div class="form-group">
   <%= f.label :start_at, '開始日時' %>
-  <%= f.datetime_field :start_at, class: 'form-control' %>
+  <%= f.datetime_field :start_at, class: 'form-control', **@start_at_options %>
 </div>
 
 <div class="form-group">
   <%= f.label :end_at, '終了日時' %>
-  <%= f.datetime_field :end_at, class: 'form-control' %>
+  <%= f.datetime_field :end_at, class: 'form-control', **@end_at_options %>
 </div>
 
 <div class="form-group">
