--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -14,11 +14,11 @@
   <table class="table table-hover">
     <thead class="table-dark">
       <tr>
-        <th>カレンダー日付</th>
+        <th>日付</th>
         <th>タイトル</th>
-        <th>開始日時</th>
-        <th>終了日時</th>
-        <th>本文</th>
+        <th>公開開始日時</th>
+        <th>公開終了日時</th>
+        <th>内容</th>
         <th colspan="2"></th>
       </tr>
     </thead>
