--- a/app/views/admins/news/_form.html.erb
+++ b/app/views/admins/news/_form.html.erb
@@ -1,26 +1,31 @@
 <div class="form-group">
   <%= f.label :calendar_date, class: "my-2" %>
   <%= f.date_field :calendar_date, class: 'form-control', min: 1.year.ago.to_date, max: 1.year.from_now.to_date, value: Date.current %>
+  <%= render "layouts/error_messages", object: f.object, attribute: :calendar_date %>
 </div>
 
 <div class="form-group">
   <%= f.label :title, class: "my-2" %>
   <%= f.text_field :title, class: 'form-control' %>
+  <%= render "layouts/error_messages", object: f.object, attribute: :title %>
 </div>
 
 <div class="form-group">
   <%= f.label :start_at, class: "my-2" %>
   <%= f.datetime_field :start_at, class: 'form-control', **@start_at_options %>
+  <%= render "layouts/error_messages", object: f.object, attribute: :start_at %>
 </div>
 
 <div class="form-group">
   <%= f.label :end_at, class: "my-2" %>
   <%= f.datetime_field :end_at, class: 'form-control', **@end_at_options %>
+  <%= render "layouts/error_messages", object: f.object, attribute: :end_at %>
 </div>
 
 <div class="form-group">
   <%= f.label :body, class: "my-2" %>
   <%= f.text_area :body, class: 'form-control' %>
+  <%= render "layouts/error_messages", object: f.object, attribute: :body %>
 </div>
 
 <% if f.object.new_record? %>
