--- a/app/views/admins/news/_form.html.erb
+++ b/app/views/admins/news/_form.html.erb
@@ -1,42 +1,42 @@
-<div class="form-group">
-  <%= f.label :calendar_date, class: "my-2" %>
+<div class="mb-4">
+  <%= f.label :calendar_date, class: "form-label" %>
   <%= f.date_field :calendar_date, class: 'form-control', **@calendar_date_options %>
   <%= render "layouts/error_messages", object: f.object, attribute: :calendar_date %>
 </div>
 
-<div class="form-group">
-  <%= f.label :title, class: "my-2" %>
+<div class="mb-4">
+  <%= f.label :title, class: "form-label" %>
   <%= f.text_field :title, class: 'form-control' %>
   <%= render "layouts/error_messages", object: f.object, attribute: :title %>
 </div>
 
-<div class="form-group">
-  <%= f.label :start_at, class: "my-2" %>
+<div class="mb-4">
+  <%= f.label :start_at, class: "form-label" %>
   <%= f.datetime_field :start_at, class: 'form-control', **@start_at_options %>
   <%= render "layouts/error_messages", object: f.object, attribute: :start_at %>
 </div>
 
-<div class="form-group">
-  <%= f.label :end_at, class: "my-2" %>
+<div class="mb-4">
+  <%= f.label :end_at, class: "form-label" %>
   <%= f.datetime_field :end_at, class: 'form-control', **@end_at_options %>
   <%= render "layouts/error_messages", object: f.object, attribute: :end_at %>
 </div>
 
-<div class="form-group">
-  <%= f.label :body, class: "my-2" %>
+<div class="mb-4">
+  <%= f.label :body, class: "form-label" %>
   <%= f.text_area :body, class: 'form-control' %>
   <%= render "layouts/error_messages", object: f.object, attribute: :body %>
 </div>
 
 <% if f.object.new_record? %>
-  <div class="mt-3">
+  <div class="custom-mt-3">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "登録完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "お知らせ一覧に戻る", @news_index_url, class: 'btn btn-secondary' %></li>
     </ul>
   </div>
 <% else %>
-  <div class="mt-3">
+  <div class="custom-mt-3">
     <ul class="list-inline">
       <li class="list-inline-item"><%= f.submit "編集を完了する", class: 'btn btn-primary' %></li>
       <li class="list-inline-item"><%= link_to "お知らせ一覧に戻る", @news_index_url, class: 'btn btn-secondary' %></li>
