--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.full_messages_for(attribute).any? %>
-  <div class="alert alert-danger">
+  <div class="text-danger">
     <ul class="mb-0">
       <% object.errors.full_messages_for(attribute).each do |message| %>
         <li><%= message %></li>
