--- a/app/views/admins/news/index.html.erb
+++ b/app/views/admins/news/index.html.erb
@@ -3,7 +3,7 @@
     <h3>お知らせ一覧</h3>
     <%= search_form_for @q, url: admins_news_index_path, class: 'form-inline' do |f| %>
       <div class="input-group">
-        <%= f.search_field @search_scope, class: 'form-control', placeholder: '検索ワード' %>
+        <%= f.search_field @search_scope, class: 'form-control', placeholder: 'タイトルや内容で検索' %>
         <div class="input-group-append">
           <%= f.submit '検索', class: 'btn btn-primary' %>
         </div>
