--- a/app/views/admins/shops/edit.html.erb
+++ b/app/views/admins/shops/edit.html.erb
@@ -1,8 +1,11 @@
 <div class="container mt-4">
-  <h3 class="mb-4">店舗情報編集</h3>
   <%= render "admins/shared/flashes" %>
-  
-  <%= form_with model: @shop, url: admins_shop_path, local: true  do |f| %>
-    <%= render partial: 'form', locals: { f: f } %>
-  <% end %>
+  <div class="card  col-sm-9 mx-auto mt-5">
+    <div class="card-body">
+      <h3 class="text-center mt-3 mb-3">店舗情報編集</h3>
+      <%= form_with model: @shop, url: admins_shops_path, local: true  do |f| %>
+        <%= render partial: 'form', locals: { f: f } %>
+      <% end %>
+    </div>
+  </div>
 </div>
