update/margin-top-3remをboostrapで書き換えた

--- a/app/views/admins/news/show.html.erb
+++ b/app/views/admins/news/show.html.erb
@@ -16,7 +16,7 @@
       <div class="mt-5">
         <p><%= @news.body %></p>
       </div>
-      <div class="custom-mt-3">
+      <div class="mt-5">
         <%= link_to "一覧に戻る", @news_index_url, class: 'btn btn-secondary' %>
       </div>
     </div>
