--- a/app/views/admins/shops/show.html.erb
+++ b/app/views/admins/shops/show.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="custom-mt-3">
+      <div class="mt-5">
         <%= link_to "一覧に戻る", @shops_index_url, class: 'btn btn-secondary' %>
       </div>
     </div>
