--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-between mb-4">
-    <h3>店舗一覧</h3>
+    <h3 class="fw-bold">店舗一覧</h3>
   </div>
   <%= render "admins/shared/flashes" %>
   <table class="table table-hover">
