update/一覧画面のテーブルがスマホサイズでも崩れないようにレイアウトを調整

--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -113,3 +113,9 @@ em {
 .pagination {
   justify-content: center;
 }
+
+@media (max-width: 576px) {
+  .mobile-block {
+    display: block !important;
+  }
+}
