update/管理画面でスマホサイズの際、--bs-gutter-xが0になるように変更

--- a/app/views/admins/news/edit.html.erb
+++ b/app/views/admins/news/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 mobile-gutter">
   <%= render "admins/shared/flashes" %>
   <div class="card  col-sm-9 mx-auto mt-5">
     <div class="card-body">
