--- a/app/views/admins/shops/index.html.erb
+++ b/app/views/admins/shops/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container mt-4 mobile-gutter">
   <div class="d-flex justify-content-between mb-4 mobile-block">
     <h3 class="fw-bold">店舗一覧</h3>
     <%= search_form_for @q, url: admins_shops_path, class: 'form-inline' do |f| %>
