--- a/app/views/admins/shops/new.html.erb
+++ b/app/views/admins/shops/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4 mobile-gutter">
   <%= render "admins/shared/flashes" %>
-  <div class="card  col-sm-9 mx-auto mt-5">
+  <div class="card col-sm-9 mx-auto mt-5 mobile-card-border">
     <div class="card-body">
       <h3 class="text-center mt-3 mb-5 fw-bold">店舗新規登録</h3>
       <%= form_with model: @shop, url: admins_shops_path, local: true  do |f| %>
