update/スマホサイズの際のテーブルの文字のサイズと、一覧画面にパディングの追加

--- a/app/frontend/entrypoints/main.scss
+++ b/app/frontend/entrypoints/main.scss
@@ -128,6 +128,12 @@ em {
 
 @media (max-width: 576px) {
   .mobile-card-border {
-    --bs-card-border-width: 0; /* または適切な値に変更 */
+    --bs-card-border-width: 0
+  }
+}
+@media (max-width: 576px) {
+  .table td, .table th {
+    font-size: 8px;
+    padding: 8px;
   }
 }
